--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body {
+  background: rgb(18, 18, 199);
+  background: linear-gradient(90deg, rgba(18, 18, 199, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
